Refactor command messages in German and English properties files.
Standardized the command message prefixes and term usage in both `tweaks_german.properties` and `tweaks.properties`. This includes changes to format consistency and minor text adjustments for clarity and uniformity.

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -1,8 +1,7 @@
 chat.format.delete=<hover:show_text:'Click to delete this message'><dark_gray>[<bold><dark_red>x</dark_red></bold>] </dark_gray>
 chat.format=<delete><chat_prefix><click:suggest_command:'/tell <player> '><chat_display_name><reset> <dark_gray>» <reset><click:copy_to_clipboard:'<message_content>'><hover:show_text:'<lang:chat.copy.click>'><message>
 command.back.none=<red><prefix> You can't go back any further</red>
-command.back.teleport.fail=<red><prefix> Failed to teleport you to your last position</red>
-command.back.teleport.success=<gray><prefix> Teleported you to your last position</gray>
+command.back=<gray><prefix> Teleported you to your last position</gray>
 command.broadcast.footer=<reset>
 command.broadcast.format=<red>Server</red> <gray>|</gray> <message><reset>
 command.broadcast.header=<reset>
@@ -30,10 +29,10 @@ command.hunger.satisfied.self=<gray><prefix> Your hunger has been satisfied</gra
 command.inventory.full=<red><prefix> Your inventory is full</red>
 command.item.head.fail=<red><prefix> You did not receive any player head</red>
 command.item.head.none=<red><prefix> Could not find matching skull data</red>
-command.item.head.player=<gray><prefix> Skull owner<dark_gray>:</dark_gray> <green><owner></green></gray>
+command.item.head.player=<gray><prefix> Head owner<dark_gray>:</dark_gray> <green><owner></green></gray>
 command.item.head.received=<gray><prefix> You received a player head</gray>
-command.item.head.url=<gray><prefix> Skull url<dark_gray>:</dark_gray> <click:open_url:'<full_url>'><hover:show_text:'<lang:chat.copy.click>'><green><url></green></gray>
-command.item.head.value=<gray><prefix> Skull value<dark_gray>:</dark_gray> <click:copy_to_clipboard:'<full_value>'><hover:show_text:'<lang:chat.copy.click>'><green><value></green></gray>
+command.item.head.url=<gray><prefix> Head url<dark_gray>:</dark_gray> <click:open_url:'<full_url>'><hover:show_text:'<lang:chat.copy.click>'><green><url></green></gray>
+command.item.head.value=<gray><prefix> Head value<dark_gray>:</dark_gray> <click:copy_to_clipboard:'<full_value>'><hover:show_text:'<lang:chat.copy.click>'><green><value></green></gray>
 command.item.lore.fail=<red><prefix> Failed to change the lore of your item</red>
 command.item.lore.success=<gray><prefix> Successfully changed the lore of your item</gray>
 command.item.received=<gray><prefix> You received <green><amount> x <item></green></gray>
