--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -1,73 +1,72 @@
-chat.format.delete=<hover:show_text:'Klicke um diese Nachricht zu löschen'><dark_gray>[<dark_red><bold>x</bold><dark_gray>] <reset>
-command.back.none=<prefix> <red>Du kannst nicht weiter zurück gehen
-command.back.teleport.fail=<prefix> <red>Du konntest nicht zu deiner letzten Position teleportiert werden
-command.back.teleport.success=<prefix> <white>Du wurdest zu deiner letzten Position teleportiert
-command.enchantment.absent=<prefix> <red>Dein Item ist nicht mit <dark_red><enchantment><red> verzaubert
-command.enchantment.applicable=<prefix> <red>Diese Verzauberung ist nicht auf <dark_red><item><red> anwendbar
-command.enchantment.applied=<prefix> <white>Dein Item wurde mit <green><enchantment><white> verzaubert
-command.enchantment.invalid=<prefix> <dark_red><enchantment><red> ist keine gültige Verzauberung
-command.enchantment.removed=<prefix> <white>Die Verzauberung <green><enchantment><white> wurde von deinem Item entfernt
-command.flight.disabled.others=<prefix> <green><player><white> kann nicht länger fliegen
-command.flight.disabled.self=<prefix> <white>Du kannst nicht länger fliegen
-command.flight.enabled.others=<prefix> <green><player>'s<white> kann ab jetzt fliegen
-command.flight.enabled.self=<prefix> <white>Du kannst ab jetzt fliegen
-command.gamemode.changed.others=<prefix> <green><player> <white>ist jetzt im <green><gamemode>
-command.gamemode.changed.self=<prefix> <white>Du bist jetzt im <green><gamemode>
-command.god.active.others=<prefix> <green><player> <white>ist jetzt unverwundbar
-command.god.active.self=<prefix> <white>Du bist jetzt unverwundbar
-command.god.inactive.others=<prefix> <green><player> <white>ist nicht länger unverwundbar
-command.god.inactive.self=<prefix> <white>Du bist nicht länger unverwundbar
-command.health.restored.others=<prefix> <green><player><white> wurde vollständig geheilt
-command.health.restored.self=<prefix> <white>Du wurdest vollständig geheilt
-command.hold.item=<prefix> <red>Du musst ein Item in der Haupthand halten
-command.hunger.satisfied.others=<prefix> <green><player>'s<white> Hunger wurde gestillt
-command.hunger.satisfied.self=<prefix> <white>Dein Hunger wurde gestillt
-command.inventory.full=<prefix> <red>Dein Inventar ist voll
-command.item.head.fail=<prefix> <red>Du hast keinen Spielerkopf erhalten
-command.item.head.none=<prefix> <red>Es konnte keine passenden Kopfdaten gefunden werden
-command.item.head.player=<prefix> <gray>Kopf Besitzer<dark_gray>: <white><owner>
-command.item.head.received=<prefix> <white>Du hast einen Spieler Kopf erhalten
-command.item.head.url=<prefix> <gray>Kopf URL<dark_gray>: <click:open_url:'<full_url>'><hover:show_text:'<lang:chat.copy.click>'><white><url>
-command.item.head.value=<prefix> <gray>Kopf Wert<dark_gray>: <click:copy_to_clipboard:'<full_value>'><hover:show_text:'<lang:chat.copy.click>'><white><value>
-command.item.lore.fail=<prefix> <red>Die Beschreibung deines Items konnte nicht angepasst werden
-command.item.lore.success=<prefix> <white>Die Beschreibung deines Items wurde erfolgreich angepasst
-command.item.received=<prefix> <white>Du hast <green><amount> x <item><white> erhalten
-command.item.rename.fail=<prefix> <red>Dein Item konnte nicht umbenannt werden
-command.item.rename.success=<prefix> <white>Dein Item wurde erfolgreich umbenannt
-command.item.repaired.all=<prefix> <white>Alle deine Items wurden repariert
-command.item.repaired.fail=<prefix> <red>Dein Item konnte nicht repariert werden
-command.item.repaired.success=<prefix> <white>Dein Item wurde repariert
-command.item.unbreakable.fail=<prefix> <red>Dein Item konnte nicht unzerstörbar gemacht werden
-command.item.unbreakable.removed=<prefix> <white>Dein Item ist nicht länger unzerstörbar
-command.item.unbreakable.success=<prefix> <white>Dein Item ist jetzt unzerstörbar
-command.last.seen.now=<prefix> <green><player><white> is aktuell online
-command.last.seen.time=<prefix> <green><player><white> war zuletzt online <green><time>
-command.motd.changed=<prefix> <white>Die motd ist jetzt <green><motd>
-command.offline.teleport.fail.to=<prefix> <red>Du konntest nicht zu <dark_red><player> <red>teleportiert werden
-command.offline.teleport.fail=<prefix> <dark_red><source> <red>konnte nicht zu <dark_red><target> <red>teleportiert werden
-command.offline.teleport.location=<prefix> <dark_red><player> <red>ist bereits bei dieser Position
-command.offline.teleport.success.to=<prefix> <white>Du wurdest zu <green><player> <white>teleportiert
-command.offline.teleport.success=<prefix> <green><source> <white>wurde zu <green><target> <white>teleportiert
-command.ping.others=<prefix> <green><player><white> hat eine verbindungslatenz von <green><ping>ms
-command.ping.self=<prefix> <white>Du hast einen verbindungslatenz von <green><ping>ms
-command.player.excluded=<prefix> <red>Der Spieler <dark_red><player><red> ist nicht betroffen
-command.sender=<prefix> <red>Du kannst diesen command nicht nutzen
-command.speed.fly.changed.others=<prefix> <green><player>'s <white>Fluggeschwindigkeit ist jetzt <green><speed>
-command.speed.fly.changed.self=<prefix> <white>Deine Fluggeschwindigkeit is jetzt <green><speed>
-command.speed.walk.changed.others=<prefix> <green><player>'s <white>Laufgeschwindigkeit ist jetzt <green><speed>
-command.speed.walk.changed.self=<prefix> <white>Deine Laufgeschwindigkeit is jetzt <green><speed>
-command.time.day=<prefix> <white>Es ist jetzt Tag in <green><world>
-command.time.midnight=<prefix> <white>Es ist jetzt Mitternacht in <green><world>
-command.time.night=<prefix> <white>Es ist jetzt Nacht in <green><world>
-command.time.noon=<prefix> <white>Es ist jetzt Mittag in <green><world>
-command.vanish.disabled.others=<prefix> <green><player> <white>ist wieder sichtbar für andere
-command.vanish.disabled.self=<prefix> <white>Du bist wieder sichtbar für andere
-command.vanish.enabled.others=<prefix> <green><player> <white>ist jetzt unsichtbar für andere
-command.vanish.enabled.self=<prefix> <white>Du bist jetzt unsichtbar für andere
-command.weather.rain=<prefix> <white>Es regnet jetzt in <green><world>
-command.weather.sun=<prefix> <white>Es scheint jetzt die Sonne in <green><world>
-command.weather.thunder=<prefix> <white>Es gewittert jetzt in <green><world>
-command.world.excluded=<prefix> <red>Die Welt <dark_red><world><red> ist nicht betroffen
-player.connected=<prefix> <green><click:suggest_command:'/tell <player> '><player><reset> <white>ist dem Spiel beigetreten
-player.disconnected=<prefix> <green><click:suggest_command:'/tell <player> '><player><reset> <white>hat das Spiel verlassen
-player.not.found=<prefix> <red>Der Spieler <dark_red><player><red> war noch nie online
+chat.format.delete=<hover:show_text:'Klicke um diese Nachricht zu löschen'><dark_gray>[<dark_red><bold>x</bold></dark_red>]</dark_gray> <reset>
+command.back.none=<red><prefix> Du kannst nicht weiter zurück gehen</red>
+command.back=<gray><prefix> Du wurdest zu deiner letzten Position teleportiert</gray>
+command.enchantment.absent=<red><prefix> Dein Item ist nicht mit <dark_red><enchantment></dark_red> verzaubert</red>
+command.enchantment.applicable=<red><prefix> Diese Verzauberung ist nicht auf <dark_red><item></dark_red> anwendbar</red>
+command.enchantment.applied=<gray><prefix> Dein Item wurde mit <green><enchantment></green> verzaubert</gray>
+command.enchantment.invalid=<red><prefix> <dark_red><enchantment></dark_red> ist keine gültige Verzauberung</red>
+command.enchantment.removed=<gray><prefix> Die Verzauberung <green><enchantment></green> wurde von deinem Item entfernt</gray>
+command.flight.disabled.others=<gray><prefix> <green><player></green> kann nicht länger fliegen</gray>
+command.flight.disabled.self=<gray><prefix> Du kannst nicht länger fliegen</gray>
+command.flight.enabled.others=<gray><prefix> <green><player></green> kann ab jetzt fliegen</gray>
+command.flight.enabled.self=<gray><prefix> Du kannst ab jetzt fliegen</gray>
+command.gamemode.changed.others=<gray><prefix> <green><player></green> ist jetzt im <green><gamemode></green></gray>
+command.gamemode.changed.self=<gray><prefix> Du bist jetzt im <green><gamemode></green></gray>
+command.god.active.others=<gray><prefix> <green><player></green> ist jetzt unverwundbar</gray>
+command.god.active.self=<gray><prefix> Du bist jetzt unverwundbar</gray>
+command.god.inactive.others=<gray><prefix> <green><player></green> ist nicht länger unverwundbar</gray>
+command.god.inactive.self=<gray><prefix> Du bist nicht länger unverwundbar</gray>
+command.health.restored.others=<gray><prefix> <green><player></green> wurde vollständig geheilt</gray>
+command.health.restored.self=<gray><prefix> Du wurdest vollständig geheilt</gray>
+command.hold.item=<red><prefix> Du musst ein Item in der Haupthand halten</red>
+command.hunger.satisfied.others=<gray><prefix> <green><player>'s</green> Hunger wurde gestillt</gray>
+command.hunger.satisfied.self=<gray><prefix> Dein Hunger wurde gestillt</gray>
+command.inventory.full=<red><prefix> Dein Inventar ist voll</red>
+command.item.head.fail=<red><prefix> Du hast keinen Spielerkopf erhalten</red>
+command.item.head.none=<red><prefix> Es konnte keine passenden Kopfdaten gefunden werden</red>
+command.item.head.player=<gray><prefix> Kopf Besitzer<dark_gray>:</dark_gray> <green><owner></green></gray>
+command.item.head.received=<gray><prefix> Du hast einen Spieler Kopf erhalten</gray>
+command.item.head.url=<gray><prefix> Kopf URL<dark_gray>:</dark_gray> <click:open_url:'<full_url>'><hover:show_text:'<lang:chat.copy.click>'><green><url></green></gray>
+command.item.head.value=<gray><prefix> Kopf Wert<dark_gray>:</dark_gray> <click:copy_to_clipboard:'<full_value>'><hover:show_text:'<lang:chat.copy.click>'><green><value></green></gray>
+command.item.lore.fail=<red><prefix> Die Beschreibung deines Items konnte nicht angepasst werden</red>
+command.item.lore.success=<gray><prefix> Die Beschreibung deines Items wurde erfolgreich angepasst</gray>
+command.item.received=<gray><prefix> Du hast <green><amount> x <item></green> erhalten</gray>
+command.item.rename.fail=<red><prefix> Dein Item konnte nicht umbenannt werden</red>
+command.item.rename.success=<gray><prefix> Dein Item wurde erfolgreich umbenannt</gray>
+command.item.repaired.all=<gray><prefix> Alle deine Items wurden repariert</gray>
+command.item.repaired.fail=<red><prefix> Dein Item konnte nicht repariert werden</red>
+command.item.repaired.success=<gray><prefix> Dein Item wurde repariert</gray>
+command.item.unbreakable.fail=<red><prefix> Dein Item konnte nicht unzerstörbar gemacht werden</red>
+command.item.unbreakable.removed=<gray><prefix> Dein Item ist nicht länger unzerstörbar</gray>
+command.item.unbreakable.success=<gray><prefix> Dein Item ist jetzt unzerstörbar</gray>
+command.last.seen.now=<gray><prefix> <green><player></green> is momentan online</gray>
+command.last.seen.time=<gray><prefix> <green><player></green> war zuletzt online <green><time></green></gray>
+command.motd.changed=<gray><prefix> Die motd ist jetzt <green><motd></green></gray>
+command.offline.teleport.fail.to=<red><prefix> Du konntest nicht zu <dark_red><player></dark_red> teleportiert werden</red>
+command.offline.teleport.fail=<red><prefix> <dark_red><source></dark_red> konnte nicht zu <dark_red><target></dark_red> teleportiert werden</red>
+command.offline.teleport.location=</red><prefix> <dark_red><player></dark_red> ist bereits bei dieser Position</red>
+command.offline.teleport.success.to=<gray><prefix> Du wurdest zu <green><player></green> teleportiert</gray>
+command.offline.teleport.success=<gray><prefix> <green><source></green> wurde zu <green><target></green> teleportiert</gray>
+command.ping.others=<gray><prefix> <green><player></green> hat eine Verbindungslatenz von <green><ping>ms</green></gray>
+command.ping.self=<gray><prefix> Du hast eine Verbindungslatenz von <green><ping>ms</green></gray>
+command.player.excluded=<red><prefix> Der Spieler <dark_red><player></dark_red> ist nicht betroffen</red>
+command.sender=<red><prefix> Du kannst diesen command nicht nutzen</red>
+command.speed.fly.changed.others=<gray><prefix> <green><player>'s</green> Fluggeschwindigkeit ist jetzt <green><speed></green></gray>
+command.speed.fly.changed.self=<gray><prefix> Deine Fluggeschwindigkeit is jetzt <green><speed></green></gray>
+command.speed.walk.changed.others=<gray><prefix> <green><player>'s</green> Laufgeschwindigkeit ist jetzt <green><speed></green></gray>
+command.speed.walk.changed.self=<gray><prefix> Deine Laufgeschwindigkeit is jetzt <green><speed></green></gray>
+command.time.day=<gray><prefix> Es ist jetzt Tag in <green><world></green></gray>
+command.time.midnight=<gray><prefix> Es ist jetzt Mitternacht in <green><world></green></gray>
+command.time.night=<gray><prefix> Es ist jetzt Nacht in <green><world></green></gray>
+command.time.noon=<gray><prefix> Es ist jetzt Mittag in <green><world></green></gray>
+command.vanish.disabled.others=<gray><prefix> <green><player></green> ist wieder sichtbar für andere</gray>
+command.vanish.disabled.self=<gray><prefix> Du bist wieder sichtbar für andere</gray>
+command.vanish.enabled.others=<gray><prefix> <green><player></green> ist jetzt unsichtbar für andere</gray>
+command.vanish.enabled.self=<gray><prefix> Du bist jetzt unsichtbar für andere</gray>
+command.weather.rain=<gray><prefix> Es regnet jetzt in <green><world></green></gray>
+command.weather.sun=<gray><prefix> Es scheint jetzt die Sonne in <green><world></green></gray>
+command.weather.thunder=<gray><prefix> Es gewittert jetzt in <green><world></green></gray>
+command.world.excluded=<red><prefix> Die Welt <dark_red><world></dark_red> ist nicht betroffen</red>
+player.connected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><player></green><reset> ist dem Spiel beigetreten</gray>
+player.disconnected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><player></green><reset> hat das Spiel verlassen</gray>
+player.not.found=<red><prefix> Der Spieler <dark_red><player></dark_red> war noch nie online</red>
