Delete extra-tweaks properties files and merge translations
Removed `extra-tweaks.properties` and `extra-tweaks_german.properties` files. Merged all translations from these files into `tweaks.properties` and `tweaks_german.properties` to streamline property management and reduce redundancy.

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -1,3 +1,4 @@
+chat.click.teleport=Click to teleport
 chat.format.delete=<hover:show_text:'Click to delete this message'><dark_gray>[<bold><dark_red>x</dark_red></bold>] </dark_gray>
 chat.format=<delete><chat_prefix><click:suggest_command:'/tell <player> '><chat_display_name><reset> <dark_gray>» <reset><click:copy_to_clipboard:'<message_content>'><hover:show_text:'<lang:chat.copy.click>'><message>
 command.back.none=<red><prefix> You can't go back any further</red>
@@ -24,6 +25,13 @@ command.hat.equipped=<gray><prefix> You have equipped your item as a hat</gray>
 command.health.restored.others=<gray><prefix> <green><player>'s</green> health has been restored</gray>
 command.health.restored.self=<gray><prefix> Your health has been restored</gray>
 command.hold.item=<red><prefix> You have to hold an item in your main hand</red>
+command.home.delete.name=<gray><prefix> Your home <green><name></green> has been deleted</gray>
+command.home.limit=<red><prefix> You can't set more then <dark_red><limit></dark_red> homes</red>
+command.home.list=<gray><prefix> Your homes <dark_gray>(<green><amount></green>):</dark_gray> <homes></gray>
+command.home.name=<gray><prefix> Teleported you to your home <green><name></green></gray>
+command.home.set.name=<gray><prefix> Your home <green><name></green> has been set</gray>
+command.home.undefined=<red><prefix> You have no home set yet</red>
+command.home.unknown=<red><prefix> You have no home called <dark_red><name></dark_red></red>
 command.hunger.satisfied.others=<gray><prefix> <green><player>'s</green> hunger has been satisfied</gray>
 command.hunger.satisfied.self=<gray><prefix> Your hunger has been satisfied</gray>
 command.inventory.full=<red><prefix> Your inventory is full</red>
@@ -47,6 +55,13 @@ command.item.unbreakable.success=<gray><prefix> Your item is now unbreakable</gr
 command.last.seen.now=<gray><prefix> <green><player></green> is online at the moment</gray>
 command.last.seen.time=<gray><prefix> <green><player></green> was last seen <green><time></gray>
 command.motd.changed=<gray><prefix>Changed motd to <green><motd></green></gray>
+command.msg.conversation=<red><prefix> You have no running conversation</red>
+command.msg.disabled=<red><prefix> You will no longer receive direct messages</red>
+command.msg.enabled=<gray><prefix> You will receive direct messages again</gray>
+command.msg.incoming=<italic><gray><hover:show_text:'Click to reply'><click:suggest_command:'/tell <sender> '><sender></click></hover> <dark_gray>-></dark_gray> You <dark_gray>»</dark_gray> <hover:show_text:'<lang:chat.copy.click>'><click:copy_to_clipboard:'<message>'><message></gray></italic>
+command.msg.outgoing=<italic><gray>You <dark_gray>-></dark_gray> <receiver> <dark_gray>»</dark_gray> <message></gray></italic>
+command.msg.self=<red><prefix> You can't message yourself</red>
+command.msg.toggled=<red><prefix> <dark_red><player></dark_red> does not accept direct messages</red>
 command.offline.teleport.fail.to=<red><prefix> Failed to teleport you to <dark_red><player></dark_red></red>
 command.offline.teleport.fail=<red><prefix> Failed to teleport <dark_red><source></dark_red> to <dark_red><target></dark_red></red>
 command.offline.teleport.location=<red><prefix> <dark_red><player></dark_red> is already at this position</red>
@@ -56,22 +71,71 @@ command.ping.others=<gray><prefix> <green><player>'s</green> connection latency 
 command.ping.self=<gray><prefix> Your connection latency is around <green><ping>ms</green></gray>
 command.player.excluded=<red><prefix> The player <dark_red><player></dark_red> is not affected</red>
 command.sender=<red><prefix> You cannot use this command</red>
+command.spawn.define=<red><prefix> Use <click:suggest_command:'/setspawn '><hover:show_text:'Click to set'><dark_red>/setspawn<red></hover></click> to set it</red>
+command.spawn.set=<gray><prefix> Set the spawn location to <green><world>, <x>, <y>, <z></green> [<green><yaw>, <pitch></green>]</gray>
+command.spawn.undefined=<red><prefix> The spawn is not yet defined</red>
+command.spawn=<gray><prefix> Teleported you to spawn</gray>
 command.speed.fly.changed.others=<gray><prefix> <green><player>'s</green> fly speed is now <green><speed></green></gray>
 command.speed.fly.changed.self=<gray><prefix> Your fly speed is now <green><speed></gray>
 command.speed.walk.changed.others=<gray><prefix> <green><player>'s</green> walk speed is now <green><speed></green></gray>
 command.speed.walk.changed.self=<gray><prefix> Your walk speed is now <green><speed></green></gray>
+command.teleport.cancelled=<red><prefix> Teleportation was cancelled</red>
+command.teleport.cooldown.movement=<gray><prefix> Teleporting... don't move for <green><time></green> seconds</gray>
+command.teleport.cooldown=<gray><prefix> You are being teleported in <green><time></green> seconds</gray>
 command.time.day=<gray><prefix> It is now day in <green><world></green></gray>
 command.time.midnight=<gray><prefix> It is now midnight in <green><world></green></gray>
 command.time.night=<gray><prefix> It is now night in <green><world></green></gray>
 command.time.noon=<gray><prefix> It is now noon in <green><world></green></gray>
+command.tpa.accepted.self=<gray><prefix> Accepted <green><player></green> teleport request</gray>
+command.tpa.accepted=<gray><prefix> <green><player></green> accepted your teleport request</gray>
+command.tpa.denied.self=<gray><prefix> Rejected <green><player></green> teleport request</gray>
+command.tpa.denied=<red><prefix> <dark_red><player></dark_red> rejected your teleport request</red>
+command.tpa.disabled=<red><prefix> You will no longer receive teleport requests</red>
+command.tpa.enabled=<gray><prefix> You will receive teleport requests again</gray>
+command.tpa.here.incoming=<gray><prefix> <green><player></green> wants to teleport you to them<newline><prefix> Click to <accept><hover:show_text:'Click to accept'><green>accept</green></hover></accept> or <deny><hover:show_text:'Click to decline'><red>decline</red></hover></deny><newline><prefix> The request will timeout after <green><time></green> seconds</gray>
+command.tpa.here.outgoing=<gray><prefix> Asked <green><player></green> to teleport them to you</gray>
+command.tpa.incoming=<gray><prefix> <green><player></green> wants to be teleported to you<newline><prefix> Click to <accept><hover:show_text:'Click to accept'><green>accept</green></hover></accept> or <deny><hover:show_text:'Click to decline'><red>decline</red></hover></deny><newline><prefix> The request will timeout after <green><time></green> seconds</gray>
+command.tpa.no-request=<red><prefix> You have no teleport request from <dark_red><player></dark_red></red>
+command.tpa.no-requests=<red><prefix> You have no teleport requests</red>
+command.tpa.outgoing=<gray><prefix> Asked <green><player></green> to teleport you to them</gray>
+command.tpa.self=<red><prefix> You can't teleport you to yourself</red>
+command.tpa.sent=<red><prefix> Already sent <dark_red><player></dark_red> a request</red>
+command.tpa.teleported=<gray><prefix> Teleported you to <green><player></green></gray>
+command.tpa.timeout.self=<red><prefix> Your teleport request to <dark_red><player></dark_red> has expired</red>
+command.tpa.timeout=<red><prefix> <dark_red><player>'s</dark_red> teleport request has expired</red>
+command.tpa.toggled=<red><prefix> <dark_red><player></dark_red> does not accept tpa requests</red>
 command.vanish.disabled.others=<gray><prefix> <green><player></green> is now visible to others</gray>
 command.vanish.disabled.self=<gray><prefix> You are now visible to others</gray>
 command.vanish.enabled.others=<gray><prefix> <green><player></green> is now invisible to others</gray>
 command.vanish.enabled.self=<gray><prefix> You are now invisible to others</gray>
+command.warp.delete=<gray><prefix> The warp <green><name></green> has been deleted</gray>
+command.warp.empty=<red><prefix> There are no warps yet</red>
+command.warp.list=<gray><prefix> Warps <dark_gray>(<green><amount></green>):</dark_gray> <warps></gray>
+command.warp.set=<gray><prefix> The warp <green><name></green> has been set</gray>
+command.warp.unknown=<red><prefix> There is no warp called <dark_red><name></dark_red></red>
+command.warp=<gray><prefix> Teleported you to warp <green><name></green></gray>
 command.weather.rain=<gray><prefix> It is now raining in <green><world></gray>
 command.weather.sun=<gray><prefix> It is now sunny in <green><world></gray>
 command.weather.thunder=<gray><prefix> It is now thundering in <green><world></gray>
 command.world.excluded=<red><prefix> The world <dark_red><world></dark_red> is not affected</red>
+gui.item.location=<dark_gray>»</dark_gray> <green><name></green>
+gui.page.next=<!i><dark_gray>»</dark_gray> <gray>Next page</gray>
+gui.page.previous=<!i><dark_gray>»</dark_gray> <gray>Previous page</gray>
+gui.title.homes=Your Homes
+gui.title.warps=Warps
 player.connected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><player></green></click> joined the game</gray>
 player.disconnected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><player></green></click> left the game</gray>
 player.not.found=<red><prefix> The player <dark_red><player></dark_red> has never played before</red>
+prefix=<blue>Tweaks</blue> <dark_gray>»</dark_gray>
+social.discord=<gray><prefix> Chat with us on <u><click:open_url:'<discord>'><#535fee>Discord</click></u></gray>
+social.reddit=<gray><prefix> Check out our <u><click:open_url:'<reddit>'><#ff4500>Subreddit></click></u></gray>
+social.teamspeak=<gray><prefix> Talk with us on <u><hover:show_text:'Click to copy: <teamspeak>'><click:copy_to_clipboard:'<teamspeak>'><#1c2837>TeamSpeak</click></hover></u></gray>
+social.twitch=<gray><prefix> Follow us on <u><click:open_url:'<twitch>'><#8b44f7>Twitch</click></u></gray>
+social.website=<gray><prefix> Visit our <u><click:open_url:'<website>'><yellow>Website<yellow></click></u></gray>
+social.x=<gray><prefix> Follow us on <u><click:open_url:'<x>'><black>X</black></click></u></gray>
+social.youtube=<gray><prefix> Subscribe to us on <u><click:open_url:'<youtube>'><#ff0808>YouTube</click></u></gray>
+url.discord=Discord
+url.reddit=Reddit
+url.twitch=Twitch
+url.x=X
+url.youtube=YouTube
