--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -1,3 +1,4 @@
+chat.click.teleport=Klicke zum teleportieren
 chat.format.delete=<hover:show_text:'Klicke um diese Nachricht zu löschen'><dark_gray>[<dark_red><bold>x</bold></dark_red>]</dark_gray> <reset>
 command.back.none=<red><prefix> Du kannst nicht weiter zurück gehen</red>
 command.back=<gray><prefix> Du wurdest zu deiner letzten Position teleportiert</gray>
@@ -19,6 +20,13 @@ command.god.inactive.self=<gray><prefix> Du bist nicht länger unverwundbar</gra
 command.health.restored.others=<gray><prefix> <green><player></green> wurde vollständig geheilt</gray>
 command.health.restored.self=<gray><prefix> Du wurdest vollständig geheilt</gray>
 command.hold.item=<red><prefix> Du musst ein Item in der Haupthand halten</red>
+command.home.delete.name=<gray><prefix> Dein Zuhause <green><name></green> wurde gelöscht</gray>
+command.home.limit=<red><prefix> Du kannst nicht mehr als <dark_red><limit></dark_red> Zuhausepunkte setzen</red>
+command.home.list=<gray><prefix> Deine Zuhausepunkte <dark_gray>(<green><amount></green>):</dark_gray> <homes></gray>
+command.home.name=<gray><prefix> Du wurdest zu deinem Zuhause <green><name></green> teleportiert</gray>
+command.home.set.name=<gray><prefix> Your home <green><name></green> has been set</gray>
+command.home.undefined=<red><prefix> Du hast noch kein Zuhause</red>
+command.home.unknown=<red><prefix> Du hast kein Zuhause namens <dark_red><name></dark_red></red>
 command.hunger.satisfied.others=<gray><prefix> <green><player>'s</green> Hunger wurde gestillt</gray>
 command.hunger.satisfied.self=<gray><prefix> Dein Hunger wurde gestillt</gray>
 command.inventory.full=<red><prefix> Dein Inventar ist voll</red>
@@ -42,6 +50,13 @@ command.item.unbreakable.success=<gray><prefix> Dein Item ist jetzt unzerstörba
 command.last.seen.now=<gray><prefix> <green><player></green> is momentan online</gray>
 command.last.seen.time=<gray><prefix> <green><player></green> war zuletzt online <green><time></green></gray>
 command.motd.changed=<gray><prefix> Die motd ist jetzt <green><motd></green></gray>
+command.msg.conversation=<red><prefix> Du bist in keiner laufende Konversation</red>
+command.msg.disabled=<red><prefix> Du akzeptierst keine Direktnachrichten mehr</red>
+command.msg.enabled=<gray><prefix> Du kannst wieder Direktnachrichten erhalten</gray>
+command.msg.incoming=<italic><gray><hover:show_text:'Klicke um zu antworten'><click:suggest_command:'/tell <sender> '><sender></click></hover> <dark_gray>-></dark_gray> Du <dark_gray>»</dark_gray> <hover:show_text:'<lang:chat.copy.click>'><click:copy_to_clipboard:'<message>'><message></gray></italic>
+command.msg.outgoing=<italic><gray>Du <dark_gray>-></dark_gray> <receiver> <dark_gray>»</dark_gray> <message></gray></italic>
+command.msg.self=<red><prefix> Du kannst dir nicht selber schreiben</red>
+command.msg.toggled=<red><prefix> <dark_red><player></dark_red> akzeptiert keine Direktnachrichten</red>
 command.offline.teleport.fail.to=<red><prefix> Du konntest nicht zu <dark_red><player></dark_red> teleportiert werden</red>
 command.offline.teleport.fail=<red><prefix> <dark_red><source></dark_red> konnte nicht zu <dark_red><target></dark_red> teleportiert werden</red>
 command.offline.teleport.location=</red><prefix> <dark_red><player></dark_red> ist bereits bei dieser Position</red>
@@ -51,22 +66,65 @@ command.ping.others=<gray><prefix> <green><player></green> hat eine Verbindungsl
 command.ping.self=<gray><prefix> Du hast eine Verbindungslatenz von <green><ping>ms</green></gray>
 command.player.excluded=<red><prefix> Der Spieler <dark_red><player></dark_red> ist nicht betroffen</red>
 command.sender=<red><prefix> Du kannst diesen command nicht nutzen</red>
+command.spawn.define=</red><prefix> Benutze <click:suggest_command:'/setspawn '><hover:show_text:'Klicke zum setzen'><dark_red>/setspawn</dark_red></hover></click> um ihn zu setzen<red>
+command.spawn.set=<gray><prefix> Der spawn wurde gesetzt <green><world>, <x>, <y>, <z></green> [<green><yaw>, <pitch></green>]</gray>
+command.spawn.undefined=<red><prefix> Der spawn ist noch nicht definiert</dark_red>
+command.spawn=<gray><prefix> Du wurdest zu spawn teleportiert</gray>
 command.speed.fly.changed.others=<gray><prefix> <green><player>'s</green> Fluggeschwindigkeit ist jetzt <green><speed></green></gray>
 command.speed.fly.changed.self=<gray><prefix> Deine Fluggeschwindigkeit is jetzt <green><speed></green></gray>
 command.speed.walk.changed.others=<gray><prefix> <green><player>'s</green> Laufgeschwindigkeit ist jetzt <green><speed></green></gray>
 command.speed.walk.changed.self=<gray><prefix> Deine Laufgeschwindigkeit is jetzt <green><speed></green></gray>
+command.teleport.cancelled=<red><prefix> Teleportation wurde abgebrochen</red>
+command.teleport.cooldown.movement=<gray><prefix> Teleportiere ... bewege dich nicht für <green><time></green> Sekunden</gray>
+command.teleport.cooldown=<gray><prefix> Du wirst in <green><time></green> Sekunden teleportiert</gray>
 command.time.day=<gray><prefix> Es ist jetzt Tag in <green><world></green></gray>
 command.time.midnight=<gray><prefix> Es ist jetzt Mitternacht in <green><world></green></gray>
 command.time.night=<gray><prefix> Es ist jetzt Nacht in <green><world></green></gray>
 command.time.noon=<gray><prefix> Es ist jetzt Mittag in <green><world></green></gray>
+command.tpa.accepted.self=<gray><prefix> Du hast <green><player>'s</green> Teleportanfrage angenommen</gray>
+command.tpa.accepted=<gray><prefix> <green><player></green> hat deine Teleportanfrage angenommen</gray>
+command.tpa.denied.self=<gray><prefix> Du hast <green><player>'s</green> Teleportanfrage abgelehnt</gray>
+command.tpa.denied=<red><prefix> <dark_red><player></dark_red> hat deine Teleportanfrage abgelehnt</red>
+command.tpa.disabled=<red><prefix> Du akzeptierst keine Teleportanfragen mehr</red>
+command.tpa.enabled=<gray><prefix> Du kannst wieder Teleportanfragen erhalten</gray>
+command.tpa.here.incoming=<gray><prefix> <green><player></green> möchte dich zu ihm/ihr teleportieren<newline><prefix> Klicke zum <accept><hover:show_text:'Klicke zum annehmen'><green>annehmen</green></hover></accept> oder <deny><hover:show_text:'Klicke zum ablehnen'><red>ablehnen</red></hover></deny><newline><prefix> Die Anfrage wird in <green><time></green> Sekunden abgebrochen</gray>
+command.tpa.here.outgoing=<gray><prefix> Du hast <green><player></green> eine Teleportanfrage zu dir gesendet</gray>
+command.tpa.incoming=<gray><prefix> <green><player></green> möchte sich zu dir teleportieren<newline><prefix> Klicke zum <accept><hover:show_text:'Klicke zum annehmen'><green>annehmen</green></hover></accept> oder <deny><hover:show_text:'Klicke zum ablehnen'><red>ablehnen</red></hover></deny><newline><prefix> Die Anfrage wird in <green><time></green> Sekunden abgebrochen</gray>
+command.tpa.no-request=<red><prefix> Du hast keine Teleportanfrage von <dark_red><player></dark_red></red>
+command.tpa.no-requests=<red><prefix> Du hast keine Teleportanfragen</red>
+command.tpa.outgoing=<gray><prefix> Du hast <green><player></green> eine Teleportanfrage gesendet</gray>
+command.tpa.self=<red><prefix> Du kannst dich nicht zu dir selber teleportieren</red>
+command.tpa.sent=<red><prefix> Du hast <dark_red><player></dark_red> bereits eine Teleportanfrage gesendet</red>
+command.tpa.teleported=<gray><prefix> Du wurdest zu <green><player></green> teleportiert</gray>
+command.tpa.timeout.self=<red><prefix> Deine Teleportanfrage zu <dark_red><player></dark_red> ist abgelaufen</red>
+command.tpa.timeout=<red><prefix> <dark_red><player>'s</dark_red> Teleportanfrage ist abgelaufen</red>
+command.tpa.toggled=<red><prefix> <dark_red><player></dark_red> akzeptiert keine Teleportanfragen</red>
 command.vanish.disabled.others=<gray><prefix> <green><player></green> ist wieder sichtbar für andere</gray>
 command.vanish.disabled.self=<gray><prefix> Du bist wieder sichtbar für andere</gray>
 command.vanish.enabled.others=<gray><prefix> <green><player></green> ist jetzt unsichtbar für andere</gray>
 command.vanish.enabled.self=<gray><prefix> Du bist jetzt unsichtbar für andere</gray>
+command.warp.delete=<gray><prefix> Der Warp <green><name></green> wurde gelöscht</gray>
+command.warp.empty=<red><prefix> Es existieren noch keine Warps</red>
+command.warp.list=<gray><prefix> Warps <dark_gray>(<green><amount></green>):</dark_gray> <warps></gray>
+command.warp.set=<gray><prefix> Der Warp <green><name></green> wurde gesetzt</gray>
+command.warp.unknown=<red><prefix> Es gibt keine Warp mit dem namen <dark_red><name></dark_red></red>
+command.warp=<gray><prefix> Du wurdest zum Warp <green><name></green> teleportiert</gray>
 command.weather.rain=<gray><prefix> Es regnet jetzt in <green><world></green></gray>
 command.weather.sun=<gray><prefix> Es scheint jetzt die Sonne in <green><world></green></gray>
 command.weather.thunder=<gray><prefix> Es gewittert jetzt in <green><world></green></gray>
 command.world.excluded=<red><prefix> Die Welt <dark_red><world></dark_red> ist nicht betroffen</red>
+gui.item.location=<dark_gray>»</dark_gray> <green><name></green>
+gui.page.next=<!i><dark_gray>»</dark_gray> <gray>Nächste Seite</gray>
+gui.page.previous=<!i><dark_gray>»</dark_gray> <gray>Vorherige Seite</gray>
+gui.title.homes=Deine Zuhausepunkte
+gui.title.warps=Schnellreisepunkte
 player.connected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><player></green><reset> ist dem Spiel beigetreten</gray>
 player.disconnected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><player></green><reset> hat das Spiel verlassen</gray>
 player.not.found=<red><prefix> Der Spieler <dark_red><player></dark_red> war noch nie online</red>
+social.discord=<gray><prefix> Schreibe mit uns auf <u><click:open_url:'<discord>'><#535fee>Discord</click></u></gray>
+social.reddit=<gray><prefix> Besuche unseren <u><click:open_url:'<reddit>'><#ff4500>Subreddit</click></u></gray>
+social.teamspeak=<gray><prefix> Rede mit uns auf <u><hover:show_text:'Klicke zum kopieren: <teamspeak>'><click:copy_to_clipboard:'<teamspeak>'><#1c2837>TeamSpeak</click></hover></u></gray>
+social.twitch=<gray><prefix> Folge uns auf <u><click:open_url:'<twitch>'><#8b44f7>Twitch</click></u></gray>
+social.website=<gray><prefix> Besuche unsere <u><click:open_url:'<website>'><yellow>Website</yellow></click></u></gray>
+social.x=<gray><prefix> Besuche unsere <u><click:open_url:'<x>'><black>X</black></click></u></gray>
+social.youtube=<gray><prefix> Abonniere uns auf <u><click:open_url:'<youtube>'><#ff0808>YouTube</click></u></gray>
