Refactor chat and command text formatting properties
Streamlined hover and click formatting for chat deletion and command execution. Enhanced usability by standardizing terminology and improving message clarity, including changes to URL and Base64 hover texts.

--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -1,5 +1,5 @@
 chat.click.teleport=Klicke zum teleportieren
-chat.format.delete=<hover:show_text:'Klicke um diese Nachricht zu löschen'><dark_gray>[<dark_red><bold>x</bold></dark_red>]</dark_gray> <reset>
+chat.format.delete=<dark_gray><hover:show_text:'Klicke um diese Nachricht zu löschen'>[<bold><dark_red>x</dark_red></bold>]</hover> </dark_gray>
 command.back.none=<red><prefix> Du kannst nicht weiter zurück gehen</red>
 command.back=<gray><prefix> Du wurdest zu deiner letzten Position teleportiert</gray>
 command.enchantment.absent=<red><prefix> Dein Item ist nicht mit <dark_red><enchantment></dark_red> verzaubert</red>
@@ -32,10 +32,10 @@ command.hunger.satisfied.self=<gray><prefix> Dein Hunger wurde gestillt</gray>
 command.inventory.full=<red><prefix> Dein Inventar ist voll</red>
 command.item.head.fail=<red><prefix> Du hast keinen Spielerkopf erhalten</red>
 command.item.head.none=<red><prefix> Es konnte keine passenden Kopfdaten gefunden werden</red>
-command.item.head.player=<gray><prefix> Kopf Besitzer<dark_gray>:</dark_gray> <green><owner></green></gray>
+command.item.head.player=<gray><prefix> Kopf Besitzer<dark_gray>:</dark_gray> <click:copy_to_clipboard:'<owner>'><hover:show_text:'<lang:chat.copy.click>'><green><owner></green></hover></click></gray>
 command.item.head.received=<gray><prefix> Du hast einen Spieler Kopf erhalten</gray>
-command.item.head.url=<gray><prefix> Kopf URL<dark_gray>:</dark_gray> <click:open_url:'<full_url>'><hover:show_text:'<lang:chat.copy.click>'><green><url></green></gray>
-command.item.head.value=<gray><prefix> Kopf Wert<dark_gray>:</dark_gray> <click:copy_to_clipboard:'<full_value>'><hover:show_text:'<lang:chat.copy.click>'><green><value></green></gray>
+command.item.head.url=<gray><prefix> Head URL<dark_gray>:</dark_gray> <click:open_url:'<full_url>'><hover:show_text:'<lang:chat.copy.click>'><green><url></green></hover></click></gray>
+command.item.head.value=<gray><prefix> Head Base64<dark_gray>:</dark_gray> <click:copy_to_clipboard:'<full_value>'><hover:show_text:'<lang:chat.copy.click>'><green><value></green></hover></click></gray>
 command.item.lore.fail=<red><prefix> Die Beschreibung deines Items konnte nicht angepasst werden</red>
 command.item.lore.success=<gray><prefix> Die Beschreibung deines Items wurde erfolgreich angepasst</gray>
 command.item.received=<gray><prefix> Du hast <green><amount> x <item></green> erhalten</gray>
@@ -118,8 +118,8 @@ gui.page.next=<!i><dark_gray>»</dark_gray> <gray>Nächste Seite</gray>
 gui.page.previous=<!i><dark_gray>»</dark_gray> <gray>Vorherige Seite</gray>
 gui.title.homes=Deine Zuhausepunkte
 gui.title.warps=Schnellreisepunkte
-player.connected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><player></green><reset> ist dem Spiel beigetreten</gray>
-player.disconnected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><player></green><reset> hat das Spiel verlassen</gray>
+player.connected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><player></green> ist dem Spiel beigetreten</gray>
+player.disconnected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><player></green> hat das Spiel verlassen</gray>
 player.not.found=<red><prefix> Der Spieler <dark_red><player></dark_red> war noch nie online</red>
 social.discord=<gray><prefix> Schreibe mit uns auf <u><click:open_url:'<discord>'><#535fee>Discord</click></u></gray>
 social.reddit=<gray><prefix> Besuche unseren <u><click:open_url:'<reddit>'><#ff4500>Subreddit</click></u></gray>
