--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -1,6 +1,6 @@
 chat.click.teleport=Click to teleport
-chat.format.delete=<hover:show_text:'Click to delete this message'><dark_gray>[<bold><dark_red>x</dark_red></bold>] </dark_gray>
-chat.format=<delete><chat_prefix><click:suggest_command:'/tell <player> '><chat_display_name><reset> <dark_gray>» <reset><click:copy_to_clipboard:'<message_content>'><hover:show_text:'<lang:chat.copy.click>'><message>
+chat.format.delete=<dark_gray><hover:show_text:'Click to delete this message'>[<bold><dark_red>x</dark_red></bold>]</hover> </dark_gray>
+chat.format=<delete><chat_prefix><click:suggest_command:'/tell <player> '><chat_display_name></click> <dark_gray>»</dark_gray> <click:copy_to_clipboard:'<message_content>'><hover:show_text:'<lang:chat.copy.click>'><message></hover></click>
 command.back.none=<red><prefix> You can't go back any further</red>
 command.back=<gray><prefix> Teleported you to your last position</gray>
 command.broadcast.footer=<reset>
@@ -37,10 +37,10 @@ command.hunger.satisfied.self=<gray><prefix> Your hunger has been satisfied</gra
 command.inventory.full=<red><prefix> Your inventory is full</red>
 command.item.head.fail=<red><prefix> You did not receive any player head</red>
 command.item.head.none=<red><prefix> Could not find matching skull data</red>
-command.item.head.player=<gray><prefix> Head owner<dark_gray>:</dark_gray> <green><owner></green></gray>
+command.item.head.player=<gray><prefix> Head owner<dark_gray>:</dark_gray> <click:copy_to_clipboard:'<owner>'><hover:show_text:'<lang:chat.copy.click>'><green><owner></green></hover></click></gray>
 command.item.head.received=<gray><prefix> You received a player head</gray>
-command.item.head.url=<gray><prefix> Head url<dark_gray>:</dark_gray> <click:open_url:'<full_url>'><hover:show_text:'<lang:chat.copy.click>'><green><url></green></gray>
-command.item.head.value=<gray><prefix> Head value<dark_gray>:</dark_gray> <click:copy_to_clipboard:'<full_value>'><hover:show_text:'<lang:chat.copy.click>'><green><value></green></gray>
+command.item.head.url=<gray><prefix> Head URL<dark_gray>:</dark_gray> <click:open_url:'<full_url>'><hover:show_text:'<lang:chat.copy.click>'><green><url></green></hover></click></gray>
+command.item.head.value=<gray><prefix> Head Base64<dark_gray>:</dark_gray> <click:copy_to_clipboard:'<full_value>'><hover:show_text:'<lang:chat.copy.click>'><green><value></green></hover></click></gray>
 command.item.lore.fail=<red><prefix> Failed to change the lore of your item</red>
 command.item.lore.success=<gray><prefix> Successfully changed the lore of your item</gray>
 command.item.received=<gray><prefix> You received <green><amount> x <item></green></gray>
