Correct German pronoun in message template
Changed the pronoun "Du" to the correct dative form "Dir" for incoming messages. This ensures proper grammar usage in German when displaying messages to users.

--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -53,7 +53,7 @@ command.motd.changed=<gray><prefix> Die motd ist jetzt <green><motd></green></gr
 command.msg.conversation=<red><prefix> Du bist in keiner laufende Konversation</red>
 command.msg.disabled=<red><prefix> Du akzeptierst keine Direktnachrichten mehr</red>
 command.msg.enabled=<gray><prefix> Du kannst wieder Direktnachrichten erhalten</gray>
-command.msg.incoming=<italic><gray><hover:show_text:'Klicke um zu antworten'><click:suggest_command:'/tell <sender> '><sender></click></hover> <dark_gray>-></dark_gray> Du <dark_gray>»</dark_gray> <hover:show_text:'<lang:chat.copy.click>'><click:copy_to_clipboard:'<message>'><message></gray></italic>
+command.msg.incoming=<italic><gray><hover:show_text:'Klicke um zu antworten'><click:suggest_command:'/tell <sender> '><sender></click></hover> <dark_gray>-></dark_gray> Dir <dark_gray>»</dark_gray> <hover:show_text:'<lang:chat.copy.click>'><click:copy_to_clipboard:'<message>'><message></gray></italic>
 command.msg.outgoing=<italic><gray>Du <dark_gray>-></dark_gray> <receiver> <dark_gray>»</dark_gray> <message></gray></italic>
 command.msg.self=<red><prefix> Du kannst dir nicht selber schreiben</red>
 command.msg.toggled=<red><prefix> <dark_red><player></dark_red> akzeptiert keine Direktnachrichten</red>
