Fix typos in German localization strings
Corrected "is" to "ist" in flight speed and walk speed command messages. This ensures accurate and clear communication for users.

--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -71,9 +71,9 @@ command.spawn.set=<gray><prefix> Der spawn wurde gesetzt <green><world>, <x>, <y
 command.spawn.undefined=<red><prefix> Der spawn ist noch nicht definiert</dark_red>
 command.spawn=<gray><prefix> Du wurdest zu spawn teleportiert</gray>
 command.speed.fly.changed.others=<gray><prefix> <green><player>'s</green> Fluggeschwindigkeit ist jetzt <green><speed></green></gray>
-command.speed.fly.changed.self=<gray><prefix> Deine Fluggeschwindigkeit is jetzt <green><speed></green></gray>
+command.speed.fly.changed.self=<gray><prefix> Deine Fluggeschwindigkeit ist jetzt <green><speed></green></gray>
 command.speed.walk.changed.others=<gray><prefix> <green><player>'s</green> Laufgeschwindigkeit ist jetzt <green><speed></green></gray>
-command.speed.walk.changed.self=<gray><prefix> Deine Laufgeschwindigkeit is jetzt <green><speed></green></gray>
+command.speed.walk.changed.self=<gray><prefix> Deine Laufgeschwindigkeit ist jetzt <green><speed></green></gray>
 command.teleport.cancelled=<red><prefix> Teleportation wurde abgebrochen</red>
 command.teleport.cooldown.movement=<gray><prefix> Teleportiere ... bewege dich nicht für <green><time></green> Sekunden</gray>
 command.teleport.cooldown=<gray><prefix> Du wirst in <green><time></green> Sekunden teleportiert</gray>
