Fix closing tags in German translation property file
Corrected improper closing tags in the German translation properties to ensure proper rendering and functionality of messages. This ensures that all text appears correctly formatted in the user interface.

--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -59,16 +59,16 @@ command.msg.self=<red><prefix> Du kannst dir nicht selber schreiben</red>
 command.msg.toggled=<red><prefix> <dark_red><player></dark_red> akzeptiert keine Direktnachrichten</red>
 command.offline.teleport.fail.to=<red><prefix> Du konntest nicht zu <dark_red><player></dark_red> teleportiert werden</red>
 command.offline.teleport.fail=<red><prefix> <dark_red><source></dark_red> konnte nicht zu <dark_red><target></dark_red> teleportiert werden</red>
-command.offline.teleport.location=</red><prefix> <dark_red><player></dark_red> ist bereits bei dieser Position</red>
+command.offline.teleport.location=<red><prefix> <dark_red><player></dark_red> ist bereits bei dieser Position</red>
 command.offline.teleport.success.to=<gray><prefix> Du wurdest zu <green><player></green> teleportiert</gray>
 command.offline.teleport.success=<gray><prefix> <green><source></green> wurde zu <green><target></green> teleportiert</gray>
 command.ping.others=<gray><prefix> <green><player></green> hat eine Verbindungslatenz von <green><ping>ms</green></gray>
 command.ping.self=<gray><prefix> Du hast eine Verbindungslatenz von <green><ping>ms</green></gray>
 command.player.excluded=<red><prefix> Der Spieler <dark_red><player></dark_red> ist nicht betroffen</red>
 command.sender=<red><prefix> Du kannst diesen command nicht nutzen</red>
-command.spawn.define=</red><prefix> Benutze <click:suggest_command:'/setspawn '><hover:show_text:'Klicke zum setzen'><dark_red>/setspawn</dark_red></hover></click> um ihn zu setzen<red>
+command.spawn.define=<red><prefix> Benutze <click:suggest_command:'/setspawn '><hover:show_text:'Klicke zum setzen'><dark_red>/setspawn</dark_red></hover></click> um ihn zu setzen<red>
 command.spawn.set=<gray><prefix> Der spawn wurde gesetzt <green><world>, <x>, <y>, <z></green> [<green><yaw>, <pitch></green>]</gray>
-command.spawn.undefined=<red><prefix> Der spawn ist noch nicht definiert</dark_red>
+command.spawn.undefined=<red><prefix> Der spawn ist noch nicht definiert</red>
 command.spawn=<gray><prefix> Du wurdest zu spawn teleportiert</gray>
 command.speed.fly.changed.others=<gray><prefix> <green><player>'s</green> Fluggeschwindigkeit ist jetzt <green><speed></green></gray>
 command.speed.fly.changed.self=<gray><prefix> Deine Fluggeschwindigkeit ist jetzt <green><speed></green></gray>
