Add suicide command feedback message
Implemented a new message for players when they use the suicide command. Updated both German and English resource files to include the appropriate translations.

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -79,6 +79,7 @@ command.speed.fly.changed.others=<gray><prefix> <green><player>'s</green> fly sp
 command.speed.fly.changed.self=<gray><prefix> Your fly speed is now <green><speed></gray>
 command.speed.walk.changed.others=<gray><prefix> <green><player>'s</green> walk speed is now <green><speed></green></gray>
 command.speed.walk.changed.self=<gray><prefix> Your walk speed is now <green><speed></green></gray>
+command.suicide=<gray><prefix> You took your own life</gray>
 command.teleport.cancelled=<red><prefix> Teleportation was cancelled</red>
 command.teleport.cooldown.movement=<gray><prefix> Teleporting... don't move for <green><time></green> seconds</gray>
 command.teleport.cooldown=<gray><prefix> You are being teleported in <green><time></green> seconds</gray>
