--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -74,6 +74,7 @@ command.speed.fly.changed.others=<gray><prefix> <green><player>'s</green> Flugge
 command.speed.fly.changed.self=<gray><prefix> Deine Fluggeschwindigkeit ist jetzt <green><speed></green></gray>
 command.speed.walk.changed.others=<gray><prefix> <green><player>'s</green> Laufgeschwindigkeit ist jetzt <green><speed></green></gray>
 command.speed.walk.changed.self=<gray><prefix> Deine Laufgeschwindigkeit ist jetzt <green><speed></green></gray>
+command.suicide=<gray><prefix> Du hast dir dein eigenes Leben genommen</gray>
 command.teleport.cancelled=<red><prefix> Teleportation wurde abgebrochen</red>
 command.teleport.cooldown.movement=<gray><prefix> Teleportiere ... bewege dich nicht für <green><time></green> Sekunden</gray>
 command.teleport.cooldown=<gray><prefix> Du wirst in <green><time></green> Sekunden teleportiert</gray>
